--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   ],
   "require": {
     "php": "~5.6 || ~7.0",
-    "zf-commons/zfc-rbac": "~2.4",
+    "zf-commons/zfc-rbac": "~2.4"
   },
   "require-dev": {
   },
